Signed-off-by: CatChen <cat3902982@163.com>

--- a/RX8F103_SampleCode_Keil_C51_V0_1/Sample_Code/GPIO/Output/GPIO.build_log.htm
+++ b/RX8F103_SampleCode_Keil_C51_V0_1/Sample_Code/GPIO/Output/GPIO.build_log.htm
@@ -18,11 +18,15 @@ Hex Converter:   OHX51.exe V1.45.0.0
 CPU DLL:         S8051.DLL V3.106.0.0
 Dialog DLL:      DCore51.DLL V2.81.5.0 
 <h2>Project:</h2>
-F:\Project\MCU TEST\交付件\RX8F103\应用软件\RX8F103_SampleCode_Keil_C51_V0_1\Sample_Code\GPIO\GPIO.uvproj
+F:\Project\MCU TEST\SW\RX8F103_SampleCode_Keil_C51\RX8F103_SampleCode_Keil_C51_V0_1\Sample_Code\GPIO\GPIO.uvproj
 Project File Date:  07/06/2021
 
 <h2>Output:</h2>
-Build target 'GPIO'
+Rebuild target 'GPIO'
+compiling main.c...
+compiling Common.c...
+compiling Delay.c...
+assembling STARTUP.A51...
 linking...
 Program Size: data=9.0 xdata=4 const=0 code=473
 creating hex file from ".\Output\GPIO"...
